app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-app-service
  namespace: student-app
spec:
  type: ClusterIP
  selector:
    app: student-app
  ports:
    - port: 80
      targetPort: 3000
