ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-app-ingress
  namespace: student-app
spec:
  rules:
    - host: student.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: student-app-service
                port:
                  number: 80
